KSENROLL-14539: Fix for wrapping issues with course day/time info.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74897 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/card.less
@@ -136,6 +136,10 @@
 .kscr-Card-ao-type {
   float: left;
   width: 3.5rem;
+
+  &--time {
+    width: 50%;
+  }
 }
 
 .kscr-Card-ao-instructor {
@@ -574,6 +578,7 @@
         .kscr-Card-courseTimes {
             display: none;
         }
+
         .panel-group .panel {
             margin: 0;
             border: none;
